# slack-mahjong-score-management

./: .gitignore  LICENSE  README.md  app.html  app.py  cls.html  config.ini  config.ini.sample  dbtools.html  dbtools.py  global_value.py  index.html  integrations.html  lib.html  libs.html  member_converter.py  poc.py  pyproject.toml  requirements.txt  score_import.py  search.js  slack-app.html  slack-app.py  test.html  test.py
.github/workflows/: docs.yml
cls/: __init__.py  command.html  command.py  config.html  config.py  mixin.html  mixin.py  parameter.py  parser.html  parser.py  result.py  rule.html  rule.py  score.html  score.py  search.html  search.py  stats.html  stats.py  subcom.html  subcom.py  timekit.html  timekit.py  types.html  types.py
command/: __init__.py  graph.py  member.py  ranking.py  record.py  results.py  search.py  slash.py  versus.py
database/: __init__.py  common.py  initialization.py
docs/: README.md  algorithm.md  api_list.md  app_arguments.md  architecture.md  config.ini.sample  dbtools.md  glossary.md  help.md  slack-app.service  test.md  troubleshooting.md
docs/config/: README.md  integrations.md  mainconf.md  ruleset.md
docs/datedase/: db-schema.md  sample_sql.md  schema.md
docs/development/: algorithm.md  architecture.md  test.md
docs/functions/: README.md  argument_keyword.md  command.md  graph.md  member_management.md  ranking.md  remarks.md  report.md  score_record.md  summary.md  team_management.md
docs/setting/: api_list.md  customize.md  daemonization.md  gradetable.md  integrations.md  setup.md  using_uv.md  using_venv.md
document/: algorithm.md  argument_keyword.md  command.md  config.ini.sample  customize.md  db-schema.md  graph.md  ranking.md  sample_sql.md  setup.md
files/: default_rule.ini
files/gradetable/: mahjongsoul.json  tenho.json
files/html/: detail.html  graph.html  index.html  menu_bar.html  page.html  ranking.html  registry.html  score_input.html  score_list.html  summary.html
files/queries/: game.info.sql  member.info.sql  record.info.sql  remarks.info.sql  results.info.sql  team.info.sql
function/: __init__.py  common.py  configure.py  error.py  global_value.py  message.py  option.py  score.py  slack_api.py  translation.py
function/uninstalled/: classtable_chk.py  classtable_mahjongsoul.json
function/unused/: classtable_tenho.json
goburei/: details.py  graph.py  member.py  record.py  results.py  search.py
integrations/: __init__.py  base.html  discord.html  factory.html  factory.py  protocols.html  protocols.py  slack.html  standard_io.html  standard_out.html  web.html
lib/: __init__.py  command.html  data.html  event.html  event.py  function.html  global_value.html  global_value.py  handler_registry.html  registry.html  utils.html
libs/: __init__.py  api.html  commands.html  configuration.html  configuration.py  data.html  datamodels.html  datamodels.py  dispatcher.html  dispatcher.py  event.html  event.py  event_dispatcher.html  event_dispatcher.py  functions.html  global_value.html  global_value.py  handler_registry.html  handler_registry.py  registry.html  types.html  types.py  utils.html
test_case/: test-All.ini  test-FileGeneration.ini  test-LastMonth.ini  test-OutOfScope.ini  test-Report.ini  test-ThisMonth.ini  test-anonymous.ini  test-groupby.ini  test-help.ini  test-individual.ini  test-rating.ini  test-team.ini
test_data/: saki.ini  saki_team.csv  test_pattern01.ini
tests/: Makefile  gen_test_data.py  pylintrc  requirements.txt  test.py
(+650 files in other folders)
