[project]
name = "slack-mahjong-score-management"
version = "0.2.0"
description = "Mahjong score management tool"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
    "slack-bolt",
    "slack-sdk",
    "matplotlib",
    "reportlab",
    "pandas",
    "tabulate[widechars]",
    "tqdm",
    "plotly",
    "flask",
    "flask_httpauth",
]

[dependency-groups]
dev = [
    "pdoc",
    "pytest",
    "mypy",
    "pylint",
    "pylint-pytest",
    "pandas-stubs",
    "types-python-dateutil",
    "types-tabulate",
    "types-reportlab",
    "types-tqdm",
]
