[project]
name = "slack-mahjong-score-management"
version = "0.4.0"
description = "Mahjong score management tool"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
    "slack-bolt",
    "slack-sdk",
    "matplotlib",
    "reportlab",
    "pandas",
    "tabulate[widechars]",
    "table2ascii",
    "tqdm",
    "plotly",
    "flask",
    "flask_httpauth",
    "py-cord",
]

[dependency-groups]
dev = [
    "pdoc",
    "pytest",
    "mypy",
    "pyrefly",
    "ruff",
    "pandas-stubs",
    "types-python-dateutil",
    "types-tabulate",
    "types-reportlab",
    "types-tqdm",
]

[tool.uv]
default-groups = ["dev"]

[tool.pyrefly]
project-includes = [
    "**/*.py",
]

[tool.pyrefly.errors]
bad-param-name-override = false
bad-argument-type = false
bad-assignment = false
bad-return = false
unsupported-operation = false
no-matching-overload = false
missing-attribute = false
missing-argument = false
unbound-name = false

[tool.ruff]
line-length = 160
indent-width = 4
# output-format = "github"

[tool.ruff.lint]
select = ["N", "E", "W", "D", "F", "I"]
ignore = [
    "N813",  # Camelcase `Xxx` imported as lowercase `xxx`
    "D102",  # Missing docstring in public method
    "D105",  # Missing docstring in magic method
    "D107",  # Missing docstring in `__init__`
    "D200",  # One-line docstring should fit on one line
    "D203",  # 1 blank line required before class docstring
    "D202",  # No blank lines allowed after function docstring
    "D212",  # Multi-line docstring summary should start at the first line
    "D213",  # Multi-line docstring summary should start at the second line
    "D400",  # First line should end with a period
    "D403",  # First word of the docstring should be capitalized
    "D413",  # Missing blank line after last section (`Returns`)
    "D415",  # First line should end with a period, question mark, or exclamation point
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
line-ending = "lf"

[lint.pydocstyle]
convention = "google"
